# PupilOptixLab

./: 1.hdr  2.hdr  3.hdr  CMakeLists.txt  albedo.hdr
app/: CMakeLists.txt
app/cuda_test/: main.cpp  pass.cpp  pass.h  test.cu  test.h
app/ddgi/: CMakeLists.txt  global.h  main.cpp
app/ddgi-resample/: CMakeLists.txt  main.cpp  reservoir.h
app/ddgi-resample/indirect/: global.cpp  global.h
app/ddgi-resample/init/: init.cu  pass.cpp  pass.h  type.h
app/ddgi-resample/path_tracer/: pt_pass.cpp  pt_pass.h
app/ddgi-resample/probe/: pass.cpp  probeIntegrate.cu  probetrace.cu  type.h
app/ddgi-resample/shading/: pass.cpp  pass.h  shading.cu  type.h
app/ddgi-resample/spatial/: pass.cpp  pass.h  spatial_reuse.cu  type.h
app/ddgi-restir/: CMakeLists.txt  main.cpp  reservoir.h
app/ddgi-restir/denoiser/: denoise_pass.cpp
app/ddgi-restir/indirect/: global.cpp  global.h  indirect.h  probemath.h
app/ddgi-restir/init/: init.cu  pass.cpp  pass.h  type.h
app/ddgi-restir/merge/: merge.cu  pass.cpp  pass.h  type.h
app/ddgi-restir/path_tracer/: pathtracer.cu  pt_pass.cpp  type.h
app/ddgi-restir/probe/: pass.cpp  pass.h  probeCopyBorder.cu  probeCopyBorder.h  probeIntegrate.cu  probeIntegrate.h  probetrace.cu  type.h
app/ddgi-restir/shading/: pass.cpp  pass.h  shading.cu  type.h
app/ddgi-restir/shadow/: pass.cpp  pass.h  shadow.cu  type.h
app/ddgi-restir/spatial/: pass.cpp  spatial_reuse.cu  type.h
app/ddgi-restir/temporal/: pass.cpp  pass.h  temporal_reuse.cu  type.h
app/ddgi-restir/visualize/: pass.cpp  pass.h  type.h  visualize.cu
app/ddgi/gbuffer/: pass.h
app/ddgi/generate_ray/: pass.cpp  pass.h  raydirection.cu  raygbuffer.cu  type.h
app/ddgi/indirect/: global.cpp  global.h  indirect.h  probemath.h
app/ddgi/probe/: pass.cpp  pass.h  probeCopyBorder.cu  probeCopyBorder.h  probeIntegrate.cu  probeIntegrate.h  probetrace.cu  test.cu  test.h  type.h
app/ddgi/pt/: pass.cpp  pt_origin.cu
app/ddgi/render/: pass.cpp  pass.h  render.cu  type.h
data/: cornellbox.xml
example/cuda_test/: pass.h
example/path_tracer/: main.cu
framework/: static.h
framework/optix/: pipeline.cpp
framework/system/: output.hlsl
framework/util/: type.h
